# bitnet

./: .gitignore  AUGMENTATION_EXPERIMENTS_SUMMARY.md  BASELINE_RECIPE.md  CONTRIBUTING.md  EXPERIMENTS_REFERENCE.sh  LICENSE  METHODOLOGY.md  PROJECT_SETUP.md  README.md  REPRODUCE.md  START_HERE.md  TTQ_VERIFICATION.md  debug_ttq_gradients.py  debug_ttq_model.py  pyproject.toml  reproduce.sh  setup.sh
.github/workflows/: ci.yml
analysis/: __init__.py  aggregate_results.py  generate_figures.py  generate_paper_figures.py  generate_tables.py  model_stats.py  statistical_analysis.py  utils.py
bitnet/: __init__.py  layer_swap.py  layer_swap_selective.py
bitnet/nn/: __init__.py  bitconv2d.py  bitlinear.py  quantization.py  ttq_conv2d.py  ttq_linear.py  ttq_linear_pure.py  ttq_quantization.py
configs/: main.yaml
configs/dataset/: cifar10.yaml
configs/experiment/: core_benchmarks.yaml
configs/model/: resnet18.yaml
environment/: .pre-commit-config.yaml  Dockerfile
experiments/: __init__.py  checkpoint.py  config.py  eval.py  logging_config.py  paths.py  sweep.py  sweep_kd.py  train.py  train_kd.py
experiments/datasets/: __init__.py  factory.py  transforms.py
experiments/models/: __init__.py  factory.py
experiments/training/: __init__.py  kd_loss.py  logging_config.py  loops.py
paper/: .gitignore  Makefile  README.md  bibliography.tex  macros.tex  main.tex  preamble.tex  references.bib
paper/sections/: 00_abstract.tex  01_introduction.tex  02_related_work.tex  03_methods.tex  03_methods_compressed.tex  04_architecture.tex  05_results.tex  06_discussion.tex  07_conclusion.tex  08_appendix_reproducibility.tex
paper/tables/: accuracy_basic.tex  accuracy_full.tex  augmentation_ablation.tex  efficiency.tex  kd_results.tex  kd_statistics.tex  (+3 more)
scripts/: download_imagenet.py  fix_naming.py  measure_memory.py  phase1_fp32_baselines.sh  phase2_fp32_kd_control.sh  phase3_bitnet_baselines.sh  phase4_bitnet_recipe.sh  rename_local.sh  rename_server.sh
tests/: __init__.py  test_determinism.py  test_layer_swap_selective.py  test_layers.py  test_quantization.py  test_ttq_layers.py  test_ttq_training.py
(+31 files in other folders)
